add swipe dismiss & java8 for android test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".FABInCoordinateLayout" />
         <activity android:name=".CollapsingToolbarInAppBar" />
         <activity android:name=".SwipeDismissActivity" />
+        <activity android:name=".TestTempActivity" />
     </application>
 
 </manifest>
