--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".FABInCoordinateLayout" />
         <activity android:name=".CollapsingToolbarInAppBar" />
         <activity android:name=".SwipeDismissActivity" />
-        <activity android:name=".TestTempActivity" />
+        <activity android:name=".SwipeDeleteActivity" />
+        <activity android:name=".TestConstraintLayoutActivity" />
     </application>
 
 </manifest>
