添加实现view滑动的api实验

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,11 @@
         <activity android:name="com.example.view.TestPathActivity" />
         <activity
             android:name="com.example.html.WebVideoActivity"
-            android:hardwareAccelerated="true"
             android:configChanges="orientation|screenSize"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait" />
+
+        <activity android:name="com.example.nestedscroll.TestOffsetActivity" />
     </application>
 
 </manifest>
