--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'joda-time:joda-time:2.9.9'
+
+    implementation 'androidx.paging:paging-common:2.1.0'
 }
