--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mdtest">
+    package="com.barran.example.mdtest">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".TestActivity"
+            android:name="com.barran.example.TestActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,22 +25,22 @@
         </activity>
 
         <activity android:name=".TabInAppBarActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name="com.barran.example.LoginActivity" />
         <activity android:name=".FABInCoordinateLayoutActivity" />
         <activity android:name=".CollapsingToolbarInAppBarActivity" />
         <activity android:name=".SwipeDismissActivity" />
         <activity android:name=".SwipeDeleteActivity" />
-        <activity android:name=".TestConstraintLayoutActivity" />
+        <activity android:name="com.barran.example.constraint.TestConstraintLayoutActivity" />
         <activity android:name=".NavigationViewActivity" />
-        <activity android:name="com.example.view.TestPathActivity" />
+        <activity android:name="com.barran.example.view.TestPathActivity" />
         <activity
-            android:name="com.example.html.WebVideoActivity"
+            android:name="com.barran.example.html.WebVideoActivity"
             android:configChanges="orientation|screenSize"
             android:hardwareAccelerated="true"
             android:screenOrientation="portrait" />
 
-        <activity android:name="com.example.nestedscroll.TestOffsetActivity" />
-        <activity android:name=".TestConstraintLayout2Activity" />
+        <activity android:name="com.barran.example.nestedscroll.TestOffsetActivity" />
+        <activity android:name="com.barran.example.constraint.TestConstraintLayout2Activity" />
     </application>
 
 </manifest>
