test hardware accelerated
Signed-off-by: 谭威 <tanwei@bigo.sg>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
 
         <activity android:name="com.barran.example.nestedscroll.TestOffsetActivity" />
         <activity android:name="com.barran.example.constraint.TestConstraintLayout2Activity" />
+        <activity
+            android:name="com.barran.example.hardware.HardwareTestAct"
+            android:hardwareAccelerated="false" />
     </application>
 
 </manifest>
