--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -45,6 +46,7 @@
         <activity
             android:name="com.barran.example.hardware.HardwareTestAct"
             android:hardwareAccelerated="false" />
+        <activity android:name="com.barran.example.other.OtherTestAct"/>
     </application>
 
 </manifest>
