--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.barran.example.mdtest">
+    package="com.barran.sample">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -14,10 +14,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name="com.barran.example.App"
+        android:name="com.barran.sample.App"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.barran.example.TestActivity"
+            android:name="com.barran.sample.TestActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -27,26 +27,27 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".TabInAppBarActivity" />
-        <activity android:name=".FABInCoordinateLayoutActivity" />
-        <activity android:name=".CollapsingToolbarInAppBarActivity" />
-        <activity android:name=".SwipeDismissActivity" />
-        <activity android:name=".SwipeDeleteActivity" />
-        <activity android:name="com.barran.example.constraint.TestConstraintLayoutActivity" />
-        <activity android:name=".NavigationViewActivity" />
-        <activity android:name="com.barran.example.view.TestPathActivity" />
+        <activity android:name="com.barran.sample.mdtest.TabInAppBarActivity" />
+        <activity android:name="com.barran.sample.mdtest.FABInCoordinateLayoutActivity" />
+        <activity android:name="com.barran.sample.mdtest.CollapsingToolbarInAppBarActivity" />
+        <activity android:name="com.barran.sample.mdtest.SwipeDismissActivity" />
+        <activity android:name="com.barran.sample.mdtest.SwipeDeleteActivity" />
+        <activity android:name="com.barran.sample.constraint.TestConstraintLayoutActivity" />
+        <activity android:name="com.barran.sample.mdtest.NavigationViewActivity" />
+        <activity android:name="com.barran.sample.view.TestPathActivity" />
         <activity
-            android:name="com.barran.example.html.WebVideoActivity"
+            android:name="com.barran.sample.html.WebVideoActivity"
             android:configChanges="orientation|screenSize"
             android:hardwareAccelerated="true"
             android:screenOrientation="portrait" />
 
-        <activity android:name="com.barran.example.nestedscroll.TestOffsetActivity" />
-        <activity android:name="com.barran.example.constraint.TestConstraintLayout2Activity" />
+        <activity android:name="com.barran.sample.nestedscroll.TestOffsetActivity" />
+        <activity android:name="com.barran.sample.constraint.TestConstraintLayout2Activity" />
         <activity
-            android:name="com.barran.example.hardware.HardwareTestAct"
+            android:name="com.barran.sample.hardware.HardwareTestAct"
             android:hardwareAccelerated="false" />
-        <activity android:name="com.barran.example.other.OtherTestAct"/>
+        <activity android:name="com.barran.sample.other.OtherTestAct"/>
+        <activity android:name="com.barran.sample.photopicker.PhotoPickerActivity"/>
     </application>
 
 </manifest>
