--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
             android:hardwareAccelerated="false" />
         <activity android:name="com.barran.sample.other.OtherTestAct"/>
         <activity android:name="com.barran.sample.photopicker.PhotoPickerActivity"/>
+
+        <activity android:name=".compose.TestCompostActivity"/>
+        <activity android:name=".compose.GestureTestActivity"/>
     </application>
 
 </manifest>
