--- a/nativelib/src/main/cpp/CMakeLists.txt
+++ b/nativelib/src/main/cpp/CMakeLists.txt
@@ -23,7 +23,8 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         nativelib.cpp
         ClassLoadHelper.h
-        ClassLoadHelper.cpp)
+        ClassLoadHelper.cpp
+        )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
