--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
 
         <activity android:name="com.barran.sample.nestedscroll.TestOffsetActivity" />
         <activity android:name="com.barran.sample.constraint.TestConstraintLayout2Activity" />
+        <activity android:name="com.barran.sample.constraint.TestConstraintLayout3Activity" />
         <activity
             android:name="com.barran.sample.hardware.HardwareTestAct"
             android:hardwareAccelerated="false" />
