add android Carousel sapmles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name="com.barran.sample.constraint.TestConstraintLayout3Activity" />
         <activity android:name="com.barran.sample.constraint.TestConstraintLayout4Activity" />
         <activity android:name="com.barran.sample.constraint.TestMotionCarouselActivity" />
+        <activity android:name="com.barran.sample.constraint.CarouselHelperActivity" />
         <activity
             android:name="com.barran.sample.hardware.HardwareTestAct"
             android:hardwareAccelerated="false" />
