测试边到边
Signed-off-by: tanwei <tanwei@bigo.sg>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+        <activity android:name=".compat.Compat35Activity" />
     </application>
 
 </manifest>
